fix(#84): Normalize path separators to forward slashes on all platforms